# slide-image-utils

./: README.md  pyproject.toml  requirements.txt
slideutils/utils/: frame.py  utils.py
