[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slide-image-utils"
description = "A package for processing single cell IF microscopy image data"
authors = [
	{name = "Amin Naghdloo", email = "naghdloo@usc.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
	"h5py >= 3.10.0",
	"opencv-python >= 4.8.0",
	"scikit-image >= 0.22.0",
	"numpy >= 1.26.0",
	"pandas >= 2.1.0",
	"scipy >= 1.11.0",
	"matplotlib >= 3.8.0",
	"tables >= 3.9.0",
	"PuLP >= 2.7.0",
]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12"
]

[project.scripts]
siu_detect_cells = "slideutils.detect_cells:main"
siu_detect_LEVs = "slideutils.detect_LEVs:main"
siu_detect_PACCs = "slideutils.detect_PACCs:main"
siu_extract_event_images = "slideutils.tools.extract_event_images:main"
siu_extract_morphs = "slideutils.tools.extract_morphs:main"
siu_extract_hdf_features = "slideutils.tools.extract_hdf_features:main"
siu_extract_closest_events = "slideutils.tools.extract_closest_events:main"
siu_filter_hdf = "slideutils.tools.hdf_tools.filter_hdf:main"
siu_merge_hdf = "slideutils.tools.hdf_tools.merge_hdf:main"
siu_sort_hdf = "slideutils.tools.hdf_tools.sort_hdf:main"
siu_create_gallery = "slideutils.vis.create_gallery:main"
siu_create_montages = "slideutils.vis.create_montages:main"
siu_create_40x_montages = "slideutils.vis.create_40x_montages:main"

[project.urls]
Repository = "https://github.com/aminnaghdloo/slide-image-utils.git"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests", "slideutils/dev", "slideutils/script"]

[tool.setuptools_scm]
